changes for google login

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 API_END_POINT=http://localhost:3000
+CLIENT_ID_IOS=617612307168-tu473np5jq8tdj8gjbr2m22rv5opov6g.apps.googleusercontent.com
+CLIENT_ID_ANDROID=617612307168-dn624kndv6ajndi816a737cjcf8jlbti.apps.googleusercontent.com
