--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
         <data android:scheme="myapp"/>
         <data android:scheme="com.erickcu1416.hymnalapp"/>
         <data android:scheme="exp+hymnal-app"/>
+        <data android:scheme="hymnal-app"/>
       </intent-filter>
     </activity>
     <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" android:exported="false"/>
