--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-navigation/native": "^6.0.2",
     "@reduxjs/toolkit": "^2.2.7",
+    "crypto": "^1.0.1",
     "expo": "~51.0.21",
+    "expo-auth-session": "~5.5.2",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
@@ -31,6 +33,7 @@
     "expo-system-ui": "~3.0.7",
     "expo-updates": "~0.25.21",
     "expo-web-browser": "~13.0.3",
+    "firebase": "^10.12.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.3",
@@ -44,7 +47,9 @@
     "react-native-ui-lib": "^7.26.2",
     "react-native-web": "~0.19.10",
     "react-redux": "^9.1.2",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "expo-application": "~5.9.1",
+    "expo-dev-client": "~4.0.21"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
